--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "scripts": {
     "start": "node ./bin/www"
   },
+  "engines": {
+    "node":"0.12.x",
+    "npm":"1.4.x"
+  },
   "dependencies": {
     "express": "~4.10.6",
     "body-parser": "~1.10.1",
