--- a/package.json
+++ b/package.json
@@ -6,17 +6,23 @@
     "start": "node ./bin/www"
   },
   "engines": {
-    "node":"0.12.x",
-    "npm":"1.4.x"
+    "node": "0.12.x",
+    "npm": "1.4.x"
+  },
+  "devDependencies": {
+    "sqlite3": "^3.0.8"
   },
   "dependencies": {
-    "express": "~4.10.6",
     "body-parser": "~1.10.1",
     "cookie-parser": "~1.3.3",
-    "morgan": "~1.5.1",
-    "serve-favicon": "~2.2.0",
     "debug": "~2.1.1",
     "ejs": "~1.0.0",
-    "express-partials": "^0.3.0"
+    "express": "~4.10.6",
+    "express-partials": "^0.3.0",
+    "morgan": "~1.5.1",
+    "pg": "^4.4.0",
+    "pg-hstore": "^2.3.2",
+    "sequelize": "^3.3.1",
+    "serve-favicon": "~2.2.0"
   }
 }
